--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,10 +26,9 @@
                 </div>
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://github.com/login/oauth/authorize?client_id=04756ad84718e094174b&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a></li>
+            <ul class="nav navbar-nav navbar-right" th:if="${session.user != null}">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">我 <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}">我 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">消息中心</a></li>
                         <li><a href="#">个人资料</a></li>
@@ -37,8 +36,17 @@
                     </ul>
                 </li>
             </ul>
+            <ul class="nav navbar-nav navbar-right" th:if="${session.user == null}">
+                <li><a href="https://github.com/login/oauth/authorize?client_id=04756ad84718e094174b&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a></li>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
+<script>
+    $(function () {
+
+    })
+</script>
 </body>
 </html>
