--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -1,5 +1,6 @@
 body{
-    background-color: #efefef;
+    /*background-color: #efefef;*/
+    background: url(../images/bg.jpg) repeat;
 }
 .main{
     background-color: white;
