--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12">
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
             <hr>
-            <div class="media" th:each="question : ${questions}">
+            <div class="media" th:each="question : ${pageBean.getList()}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-rounded" th:src="${question.user.avatarUrl}" src="https://avatars2.githubusercontent.com/u/32722446?v=4" alt="...">
@@ -61,7 +61,7 @@
                 <div class="media-body">
                     <h4 class="media-heading" th:text="${question.getTitle()}">怎么快速学会Spring Boot开发</h4>
                     <span th:text="${question.getDescription()}">点击进入看 小匠 录制的视频</span><br>
-                    <span class="text-desc">• [[${question.commentCount}]] 个回复 • [[${question.viewCount}]] 次浏览 • [[${#dates.format(question.gmtCreate, 'yyyy/MM/dd HH:mm:ss')}]] </span>
+                    <span class="text-desc">• [[${question.commentCount}]] 个回复 • [[${question.viewCount}]] 次浏览 • [[${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm:ss')}]] </span>
                 </div>
             </div>
         </div>
@@ -69,6 +69,31 @@
             <h3>热门话题</h3>
         </div>
     </div>
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+            <li th:if="${pageBean.showFirstPage}">
+                <a href="#" th:href="@{/(page=1)}" aria-label="Previous">
+                    <span aria-hidden="true">&lt;&lt;</span>
+                </a>
+            </li>
+            <li th:if="${pageBean.showPrevious}">
+                <a href="#" th:href="@{/(page=${pageBean.page-1})}" aria-label="Previous">
+                    <span aria-hidden="true">&lt;</span>
+                </a>
+            </li>
+            <li th:each="page : ${pageBean.getPages()}" th:class="${pageBean.page == page}?'active':''"><a href="#" th:href="@{/(page=${page})}" th:text="${page}">1</a></li>
+            <li th:if="${pageBean.showNext}">
+                <a href="#"  th:href="@{/(page=${pageBean.page+1})}" aria-label="Next">
+                    <span aria-hidden="true">&gt;</span>
+                </a>
+            </li>
+            <li th:if="${pageBean.showEndPage}">
+                <a href="#" th:href="@{/(page=${pageBean.totalPage})}"  aria-label="Next">
+                    <span aria-hidden="true">&gt;&gt;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </div>
 
 </body>
