--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>程序员的小宇宙</title>
+    <title>个人中心</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/bootstrap-theme.min.css}">
@@ -11,10 +11,10 @@
 </head>
 <body>
 <div th:replace="navigation::.navbar"></div>
-<div class="container-fluid main">
+<div class="container-fluid main profile">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12">
-            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
+            <h2 th:text="${sectionName}"></h2>
             <hr>
             <div class="media" th:each="question : ${pageBean.getList()}">
                 <div class="media-left">
@@ -24,35 +24,37 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading" th:text="${question.getTitle()}">怎么快速学会Spring Boot开发</h4>
-                    <span th:text="${question.getDescription()}">点击进入看 小匠 录制的视频</span><br>
                     <span class="text-desc">• [[${question.commentCount}]] 个回复 • [[${question.viewCount}]] 次浏览 • [[${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm:ss')}]] </span>
                 </div>
             </div>
         </div>
-        <div class="col-lg-3 col-md-12 col-sm-12 col-sm-12">
-            <h3>热门话题</h3>
+        <div class="col-lg-3 col-md-12 col-sm-12 col-sm-12 ">
+            <div class="list-group section">
+                <a href="#" th:href="@{/profile/questions}" class="list-group-item" th:classappend="${section == 'questions'}?'active':''">我的问题</a>
+                <a href="#" th:href="@{/profile/replies}" class="list-group-item" th:classappend="${section == 'replies'}?'active':''">我的回复</a>
+            </div>
         </div>
     </div>
     <nav aria-label="Page navigation">
         <ul class="pagination">
             <li th:if="${pageBean.showFirstPage}">
-                <a href="#" th:href="@{/(page=1)}" aria-label="Previous">
+                <a href="#" th:href="@{'/profile/'+${section}(page=1)}" aria-label="Previous">
                     <span aria-hidden="true">&lt;&lt;</span>
                 </a>
             </li>
             <li th:if="${pageBean.showPrevious}">
-                <a href="#" th:href="@{/(page=${pageBean.page-1})}" aria-label="Previous">
+                <a href="#" th:href="@{'/profile/'+${section}(page=${pageBean.page-1})}" aria-label="Previous">
                     <span aria-hidden="true">&lt;</span>
                 </a>
             </li>
-            <li th:each="page : ${pageBean.getPages()}" th:class="${pageBean.page == page}?'active':''"><a href="#" th:href="@{/(page=${page})}" th:text="${page}">1</a></li>
+            <li th:each="page : ${pageBean.getPages()}" th:class="${pageBean.page == page}?'active':''"><a href="#" th:href="@{'/profile/'+${section}(page=${page})}" th:text="${page}">1</a></li>
             <li th:if="${pageBean.showNext}">
-                <a href="#"  th:href="@{/(page=${pageBean.page+1})}" aria-label="Next">
+                <a href="#"  th:href="@{'/profile/'+${section}(page=${pageBean.page+1})}" aria-label="Next">
                     <span aria-hidden="true">&gt;</span>
                 </a>
             </li>
             <li th:if="${pageBean.showEndPage}">
-                <a href="#" th:href="@{/(page=${pageBean.totalPage})}"  aria-label="Next">
+                <a href="#" th:href="@{'/profile/'+${section}(page=${pageBean.totalPage})}"  aria-label="Next">
                     <span aria-hidden="true">&gt;&gt;</span>
                 </a>
             </li>
