--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -10,47 +10,7 @@
     <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
 </head>
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">程序员的小宇宙</span>
-            </button>
-            <a class="navbar-brand" href="#" th:href="@{/}">程序员的小宇宙</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="搜索问题">
-                </div>
-                <button type="submit" class="btn btn-default">搜索</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right" th:if="${session.user != null}">
-                <li>
-                    <a th:href="@{/publish}">发布</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false" th:text="${session.user.getName()}">我 <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">消息中心</a></li>
-                        <li><a href="#">个人资料</a></li>
-                        <li><a href="#">退出登录</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right" th:if="${session.user == null}">
-                <li>
-                    <a href="https://github.com/login/oauth/authorize?client_id=04756ad84718e094174b&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
-                </li>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<div th:replace="navigation::.navbar"></div>
 
 <div class="container-fluid main">
     <div class="row">
