add question html

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -22,3 +22,8 @@ body{
 .profile .section{
     margin-top: 18px;
 }
+.community-menu{
+    color: #999;
+    font-size: 14px;
+    cursor: pointer;
+}
