--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -34,7 +34,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="#" th:href="@{/profile/questions}">我的问题</a></li>
                         <li><a href="#" th:href="@{/profile/replies}">我的回复</a></li>
-                        <li><a href="#">退出登录</a></li>
+                        <li><a href="#" th:href="@{/logout}">退出登录</a></li>
                     </ul>
                 </li>
             </ul>
