--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>个人中心</title>
+    <title th:text="${sectionName}">个人中心</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/bootstrap-theme.min.css}">
@@ -30,8 +30,8 @@
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-sm-12 ">
             <div class="list-group section">
-                <a href="#" th:href="@{/profile/questions}" class="list-group-item" th:classappend="${section == 'questions'}?'active':''">我的问题</a>
-                <a href="#" th:href="@{/profile/replies}" class="list-group-item" th:classappend="${section == 'replies'}?'active':''">我的回复</a>
+                <a href="#" th:href="@{/profile/questions}" class="list-group-item" th:classappend="${section == 'questions'}?'active':''">我的问题<span class="badge">42</span></a>
+                <a href="#" th:href="@{/profile/replies}" class="list-group-item" th:classappend="${section == 'replies'}?'active':''">我的回复<span class="badge">42</span></a>
             </div>
         </div>
     </div>
