--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -18,6 +18,7 @@
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
             <hr>
             <form action="/publish" method="post">
+                <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题 (简单扼要) :</label>
                     <input type="text" class="form-control" name="title" id="title" placeholder="问题标题......"
