--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -14,6 +14,12 @@ body{
     width: 38px;
     height: 38px;
 }
+.comment-media-body{
+    padding-top: 10px;
+}
+.comment{
+    margin: 10px 0;
+}
 .text-desc{
     font-size: 12px;
     font-weight: normal;
