--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -8,18 +8,40 @@
     <link rel="stylesheet" th:href="@{/css/community.css}">
     <script type="text/javascript" th:src="@{/js/jquery-1.11.3.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
+    <script type="text/javascript" th:src="@{/js/community.js}"></script>
 </head>
 <body>
 <div th:replace="navigation::.navbar"></div>
 <div class="container-fluid main profile">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12">
-            <h4 th:text="${questionDTO.title}"></h4>
-            <span class="text-desc">作者: [[${questionDTO.user.name}]] | 发布于[[${#dates.format(questionDTO.gmtCreate, 'yyyy-MM-dd HH:mm:ss')}]] | 阅读数: [[${questionDTO.viewCount}]]  </span>
-            <hr>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 " th:text="${questionDTO.description}"></div>
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12 ">
-            <a class="community-menu" th:href="@{'/publish/'+${questionDTO.id}}" th:if="${session.user != null && session.user.id==questionDTO.user.id}"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>编辑</a>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
+                <h4 th:text="${questionDTO.title}"></h4>
+                <span class="text-desc">作者: [[${questionDTO.user.name}]] | 发布于[[${#dates.format(questionDTO.gmtCreate, 'yyyy-MM-dd HH:mm:ss')}]] | 阅读数: [[${questionDTO.viewCount}]]  </span>
+                <hr>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 " th:text="${questionDTO.description}"></div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12 ">
+                <a class="community-menu" th:href="@{'/publish/'+${questionDTO.id}}" th:if="${session.user != null && session.user.id==questionDTO.user.id}">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>编辑
+                </a>
+            </div>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 comment-section">
+                <div class="media-left">
+                        <span href="#">
+                            <img class="media-object img-rounded" th:src="${questionDTO.user.avatarUrl}"  alt="...">
+                        </span>
+                </div>
+                <div class="media-body comment-media-body">
+                        <span>
+                            <h5 class="media-heading" th:text="${questionDTO.user.name}"></h5>
+                        </span>
+                </div>
+<!--                <input type="hidden" id="question_id" th:value="${questionDTO.id}">-->
+                <input type="hidden" id="question_id" value="123">
+                <textarea name="content" id="comment-content" class="form-control comment" cols="30" rows="10"></textarea>
+                <button type="submit" class="btn btn-success btn-publish" onclick="post()">回复</button>
+            </div>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-sm-12 ">
             <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 ">
