--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -14,6 +14,13 @@ body{
     width: 38px;
     height: 38px;
 }
+
+.question-title{
+    margin-top: 25px;
+}
+.creator{
+    margin-top: 25px;
+}
 .comment-media-body{
     padding-top: 10px;
 }
@@ -29,6 +36,8 @@ body{
     margin-top: 18px;
 }
 .community-menu{
+    display: block;
+    margin-bottom: 15px;
     color: #999;
     font-size: 14px;
     cursor: pointer;
@@ -38,4 +47,18 @@ body{
 }
 .jumbotron .error-content{
     margin: 50px;
+}
+.comment-sp{
+    margin-top: 0;
+}
+.menu{
+    color: #999;
+}
+.menu .icon{
+    margin-right: 6px;
+    font-size: 15px;
+    cursor: pointer;
+}
+.menu .icon:hover{
+    color: #155faa;
 }
