--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title th:text="${questionDTO.title}">个人中心</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/bootstrap-theme.min.css}">
     <link rel="stylesheet" th:href="@{/css/community.css}">
@@ -16,40 +16,72 @@
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
-                <h4 th:text="${questionDTO.title}"></h4>
+                <h4 class="question-title" th:text="${questionDTO.title}"></h4>
                 <span class="text-desc">作者: [[${questionDTO.user.name}]] | 发布于[[${#dates.format(questionDTO.gmtCreate, 'yyyy-MM-dd HH:mm:ss')}]] | 阅读数: [[${questionDTO.viewCount}]]  </span>
-                <hr>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 " th:text="${questionDTO.description}"></div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12 ">
-                <a class="community-menu" th:href="@{'/publish/'+${questionDTO.id}}" th:if="${session.user != null && session.user.id==questionDTO.user.id}">
+                <a class="community-menu" th:href="@{'/publish/'+${questionDTO.id}}"
+                   th:if="${session.user != null && session.user.id==questionDTO.user.id}">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>编辑
                 </a>
             </div>
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 comment-section">
-                <div class="media-left">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
+                <h4 class="col-lg-12 col-md-12 col-sm-12 col-sm-12"><span th:text="${questionDTO.commentCount}"></span>
+                    个回复
+                </h4>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12 comment-sp">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12" th:each="comment:${comments}"
+                     th:if="${comments != null}">
+                    <div class="media-left">
                         <span href="#">
-                            <img class="media-object img-rounded" th:src="${questionDTO.user.avatarUrl}"  alt="...">
+                            <img class="media-object img-rounded" th:src="${comment.user.avatarUrl}" alt="...">
                         </span>
+                    </div>
+                    <div class="media-body">
+                        <span>
+                            <h5 class="media-heading" th:text="${comment.user.name}"></h5>
+                        </span>
+                        <div th:text="${comment.content}">我是回复内容</div>
+                        <div class="menu">
+                            <span class="glyphicon glyphicon-thumbs-up icon" aria-hidden="true"></span>
+                            <span class="glyphicon glyphicon-comment icon" aria-hidden="true"></span>
+                            <span class="pull-right" th:text="${#dates.format(comment.gmtCreate, 'yyyy-MM-dd')}"></span>
+                        </div>
+                    </div>
+                    <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
                 </div>
-                <div class="media-body comment-media-body">
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 comment-section">
+                    <h4 class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
+                        <span>提交回复</span>
+                    </h4>
+                    <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12 comment-sp">
+                    <div class="media-left">
+                        <span href="#">
+                            <img class="media-object img-rounded" th:src="${questionDTO.user.avatarUrl}" alt="...">
+                        </span>
+                    </div>
+                    <div class="media-body comment-media-body">
                         <span>
                             <h5 class="media-heading" th:text="${questionDTO.user.name}"></h5>
                         </span>
+                    </div>
+                    <input type="hidden" id="question_id" th:value="${questionDTO.id}">
+                    <textarea name="content" id="comment-content" class="form-control comment" cols="30"
+                              rows="10"></textarea>
+                    <button type="submit" class="btn btn-success btn-publish" onclick="post()">回复</button>
                 </div>
-<!--                <input type="hidden" id="question_id" th:value="${questionDTO.id}">-->
-                <input type="hidden" id="question_id" value="123">
-                <textarea name="content" id="comment-content" class="form-control comment" cols="30" rows="10"></textarea>
-                <button type="submit" class="btn btn-success btn-publish" onclick="post()">回复</button>
             </div>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-sm-12 ">
             <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 ">
-                <h4>发起人</h4>
+                <h4 class="creator">发起人</h4>
                 <div class="media">
                     <div class="media-left">
                         <span href="#">
-                            <img class="media-object img-rounded" th:src="${questionDTO.user.avatarUrl}"  alt="...">
+                            <img class="media-object img-rounded" th:src="${questionDTO.user.avatarUrl}" alt="...">
                         </span>
                     </div>
                     <div class="media-body">
