--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -15,6 +15,7 @@
 <div class="container-fluid main profile">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12">
+            <!--问题正文-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
                 <h4 class="question-title" th:text="${questionDTO.title}"></h4>
                 <span class="text-desc">作者: [[${questionDTO.user.name}]] | 发布于[[${#dates.format(questionDTO.gmtCreate, 'yyyy-MM-dd HH:mm:ss')}]] | 阅读数: [[${questionDTO.viewCount}]]  </span>
@@ -26,6 +27,7 @@
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>编辑
                 </a>
             </div>
+            <!--评论-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
                 <h4 class="col-lg-12 col-md-12 col-sm-12 col-sm-12"><span th:text="${questionDTO.commentCount}"></span>
                     个回复
@@ -38,20 +40,25 @@
                             <img class="media-object img-rounded" th:src="${comment.user.avatarUrl}" alt="...">
                         </span>
                     </div>
-                    <div class="media-body">
+                    <div class="media-body" th:id="${'comment-body-'+comment.id}">
                         <span>
                             <h5 class="media-heading" th:text="${comment.user.name}"></h5>
                         </span>
                         <div th:text="${comment.content}">我是回复内容</div>
                         <div class="menu">
                             <span class="glyphicon glyphicon-thumbs-up icon" aria-hidden="true"></span>
-                            <span class="glyphicon glyphicon-comment icon" aria-hidden="true"></span>
+                            <span class="icon">
+                                <span class="glyphicon glyphicon-comment " aria-hidden="true" th:data-id="${comment.id}"
+                                  onclick="collapseComments(this)" ></span>
+                                <span th:text="${comment.commentCount}"></span>
+                            </span>
                             <span class="pull-right" th:text="${#dates.format(comment.gmtCreate, 'yyyy-MM-dd')}"></span>
                         </div>
                     </div>
                     <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
                 </div>
             </div>
+            <!-- 回复框-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 comment-section">
                     <h4 class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
@@ -75,6 +82,7 @@
                 </div>
             </div>
         </div>
+        <!-- 右边栏-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-sm-12 ">
             <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 ">
                 <h4 class="creator">发起人</h4>
