--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -22,6 +22,13 @@
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 " th:text="${questionDTO.description}"></div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12 ">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 ">
+                    <span class="label label-info question-tag" th:each="t:${questionDTO.tag.split(',')}">
+                        <span class="glyphicon glyphicon-tags" aria-hidden="true"></span>
+                        <span class="label label-info" th:text="${t}"></span>
+                    </span>
+                </div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12 ">
                 <a class="community-menu" th:href="@{'/publish/'+${questionDTO.id}}"
                    th:if="${session.user != null && session.user.id==questionDTO.user.id}">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>编辑
@@ -49,7 +56,7 @@
                             <span class="glyphicon glyphicon-thumbs-up icon" aria-hidden="true"></span>
                             <span class="icon">
                                 <span class="glyphicon glyphicon-comment " aria-hidden="true" th:data-id="${comment.id}"
-                                  onclick="collapseComments(this)" ></span>
+                                      onclick="collapseComments(this)"></span>
                                 <span th:text="${comment.commentCount}"></span>
                             </span>
                             <span class="pull-right" th:text="${#dates.format(comment.gmtCreate, 'yyyy-MM-dd')}"></span>
@@ -100,8 +107,18 @@
                 </div>
             </div>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 ">
+                    <h4>站长微信</h4>
+                    <img class="img-thumbnail question-wechat" th:src="@{/images/wechat.jpg}">
+            </div>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 ">
                 <h4>相关问题</h4>
+                <ul class="question-releated">
+                    <li th:each="releated:${releatedQuestions}" class="question-releated">
+                        <a th:href="@{'/question/'+${releated.id}}" th:text="${releated.title}"></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
