--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -85,7 +85,7 @@
                     <input type="hidden" id="question_id" th:value="${questionDTO.id}">
                     <textarea name="content" id="comment-content" class="form-control comment" cols="30"
                               rows="10"></textarea>
-                    <button type="submit" class="btn btn-success btn-publish" onclick="post()">回复</button>
+                    <button type="submit" class="btn btn-success publish-btn" onclick="post()">回复</button>
                 </div>
             </div>
         </div>
