--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -16,22 +16,57 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12">
             <h2 th:text="${sectionName}"></h2>
             <hr>
-            <div class="media" th:each="question : ${pageBean.getList()}">
-                <div class="media-left">
-                    <a href="#">
-                        <img class="media-object img-rounded" th:src="${question.user.avatarUrl}" src="https://avatars2.githubusercontent.com/u/32722446?v=4" alt="...">
-                    </a>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12" th:if="${section == 'questions'}">
+                <div class="media" th:each="question : ${pageBean.getList()}">
+
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object img-rounded" th:src="${question.user.avatarUrl}" src="https://avatars2.githubusercontent.com/u/32722446?v=4" alt="...">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <a th:href="@{'/question/'+${question.id}}"> <h4 class="media-heading" th:text="${question.getTitle()}">怎么快速学会Spring Boot开发</h4></a>
+                        <span class="profile-text-desc">• [[${question.commentCount}]] 个回复 •
+                        [[${question.viewCount}]] 次浏览 •
+                        [[${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm:ss')}]] •
+                        <a  th:href="@{'/publish/'+${question.id}}"
+                            th:if="${session.user != null && session.user.id==question.user.id}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                        </a>
+                    </span>
+                    </div>
                 </div>
-                <div class="media-body">
-                    <h4 class="media-heading" th:text="${question.getTitle()}">怎么快速学会Spring Boot开发</h4>
-                    <span class="text-desc">• [[${question.commentCount}]] 个回复 • [[${question.viewCount}]] 次浏览 • [[${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm:ss')}]] </span>
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12" th:if="${section == 'replies'}">
+                <div class="media" th:each="notification : ${pageBean.getList()}">
+                    <div class="media-body">
+                        <p class="media-heading" th:if="${notification.getQuestion()!=null}">
+                            <span th:text="${notification.getUser().name +' ' + '回复了问题' + ' '}"></span>
+                            <a th:href="@{'/notification/'+ ${notification.id}}"
+                               th:text="${notification.getQuestion().title}">
+                            </a>
+                            <span class="label label-danger" th:if="${notification.status == 0}">未读</span>
+                        </p>
+
+                        <p class="media-heading" th:if="${notification.getComment()!=null}">
+                            <span th:text="${notification.getUser().name +' ' + '回复了评论' + ' '}"></span>
+                            <a th:href="@{'/notification/'+ ${notification.id}}"
+                               th:text="${notification.getComment().content}">
+                            </a>
+                            <span class="label label-danger" th:if="${notification.status == 0}">未读</span>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-sm-12 ">
             <div class="list-group section">
-                <a href="#" th:href="@{/profile/questions}" class="list-group-item" th:classappend="${section == 'questions'}?'active':''">我的问题<span class="badge">42</span></a>
-                <a href="#" th:href="@{/profile/replies}" class="list-group-item" th:classappend="${section == 'replies'}?'active':''">我的回复<span class="badge">42</span></a>
+                <a href="#" th:href="@{/profile/questions}" class="list-group-item" th:classappend="${section == 'questions'}?'active':''">
+                    我的问题
+                </a>
+                <a href="#" th:href="@{/profile/replies}" class="list-group-item" th:classappend="${section == 'replies'}?'active':''">
+                    我的回复<span class="badge" th:text="${session.unreadCount}" th:if="${session.unreadCount != 0}">42</span>
+                </a>
             </div>
         </div>
     </div>
