添加SDK图片上传和日志

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -13,7 +13,7 @@
 <div th:replace="navigation::.navbar"></div>
 <div class="container-fluid main profile">
     <div class="row">
-        <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12 main-left">
             <h2 th:text="${sectionName}"></h2>
             <hr>
             <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12" th:if="${section == 'questions'}">
@@ -58,6 +58,31 @@
                     </div>
                 </div>
             </div>
+            <nav class="pull-right" aria-label="Page navigation">
+                <ul class="pagination">
+                    <li th:if="${pageBean.showFirstPage}">
+                        <a href="#" th:href="@{'/profile/'+${section}(page=1)}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;&lt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pageBean.showPrevious}">
+                        <a href="#" th:href="@{'/profile/'+${section}(page=${pageBean.page-1})}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                        </a>
+                    </li>
+                    <li th:each="page : ${pageBean.getPages()}" th:class="${pageBean.page == page}?'active':''"><a href="#" th:href="@{'/profile/'+${section}(page=${page})}" th:text="${page}">1</a></li>
+                    <li th:if="${pageBean.showNext}">
+                        <a href="#"  th:href="@{'/profile/'+${section}(page=${pageBean.page+1})}" aria-label="Next">
+                            <span aria-hidden="true">&gt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pageBean.showEndPage}">
+                        <a href="#" th:href="@{'/profile/'+${section}(page=${pageBean.totalPage})}"  aria-label="Next">
+                            <span aria-hidden="true">&gt;&gt;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-sm-12 ">
             <div class="list-group section">
@@ -70,32 +95,8 @@
             </div>
         </div>
     </div>
-    <nav aria-label="Page navigation">
-        <ul class="pagination">
-            <li th:if="${pageBean.showFirstPage}">
-                <a href="#" th:href="@{'/profile/'+${section}(page=1)}" aria-label="Previous">
-                    <span aria-hidden="true">&lt;&lt;</span>
-                </a>
-            </li>
-            <li th:if="${pageBean.showPrevious}">
-                <a href="#" th:href="@{'/profile/'+${section}(page=${pageBean.page-1})}" aria-label="Previous">
-                    <span aria-hidden="true">&lt;</span>
-                </a>
-            </li>
-            <li th:each="page : ${pageBean.getPages()}" th:class="${pageBean.page == page}?'active':''"><a href="#" th:href="@{'/profile/'+${section}(page=${page})}" th:text="${page}">1</a></li>
-            <li th:if="${pageBean.showNext}">
-                <a href="#"  th:href="@{'/profile/'+${section}(page=${pageBean.page+1})}" aria-label="Next">
-                    <span aria-hidden="true">&gt;</span>
-                </a>
-            </li>
-            <li th:if="${pageBean.showEndPage}">
-                <a href="#" th:href="@{'/profile/'+${section}(page=${pageBean.totalPage})}"  aria-label="Next">
-                    <span aria-hidden="true">&gt;&gt;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-</div>
 
+</div>
+<div th:replace="footer::.foot"></div>
 </body>
 </html>
