--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -6,6 +6,15 @@ body{
     background-color: white;
     margin: 30px;
 }
+.main-left{
+    border-right:1px solid #eee ;
+}
+.main-left a{
+   color: #155FAA;;
+}
+.main-right{
+    line-height: 2;
+}
 .publish-btn{
     float: right;
     margin-top: 15px;
@@ -74,6 +83,11 @@ body{
 .sub-comments .btn{
     margin: 10px 0
 }
+.index-text-desc{
+    font-size: 12px;
+    font-weight: normal;
+    color: #999;
+}
 .profile-text-desc{
     font-size: 12px;
     font-weight: normal;
@@ -114,4 +128,8 @@ body{
 }
 .menu .icon:hover{
     color: #155faa;
+}
+.foot{
+    color: #666;
+    padding: 15px 25%;
 }
