--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
 <div th:replace="navigation::.navbar"></div>
 <div class="container-fluid main">
     <div class="row">
-        <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12 main-left">
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span>发现</h2>
             <hr>
             <div class="media" th:each="question : ${pageBean.getList()}">
@@ -33,41 +33,50 @@
                 </div>
                 <div class="media-body">
                    <a th:href="@{'/question/'+${question.id}}"> <h4 class="media-heading" th:text="${question.getTitle()}">怎么快速学会Spring Boot开发</h4></a>
-                    <span th:text="${question.getDescription()}">点击进入看 小匠 录制的视频</span><br>
-                    <span class="text-desc">• [[${question.commentCount}]] 个回复 • [[${question.viewCount}]] 次浏览 • [[${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm:ss')}]] </span>
+<!--                    <span th:text="${question.getDescription()}">点击进入看 小匠 录制的视频</span><br>-->
+                    <span class="index-text-desc">• [[${question.commentCount}]] 个回复 • [[${question.viewCount}]] 次浏览 • [[${#dates.format(question.gmtCreate, 'yyyy-MM-dd HH:mm:ss')}]] </span>
                 </div>
             </div>
+            <nav class="pull-right" aria-label="Page navigation">
+                <ul class="pagination">
+                    <li th:if="${pageBean.showFirstPage}">
+                        <a href="#" th:href="@{/(page=1,search=${search})}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;&lt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pageBean.showPrevious}">
+                        <a href="#" th:href="@{/(page=${pageBean.page-1},search=${search})}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                        </a>
+                    </li>
+                    <li th:each="page : ${pageBean.getPages()}" th:class="${pageBean.page == page}?'active':''"><a href="#" th:href="@{/(page=${page},search=${search})}" th:text="${page}">1</a></li>
+                    <li th:if="${pageBean.showNext}">
+                        <a href="#"  th:href="@{/(page=${pageBean.page+1},search=${search})}" aria-label="Next">
+                            <span aria-hidden="true">&gt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${pageBean.showEndPage}">
+                        <a href="#" th:href="@{/(page=${pageBean.totalPage},search=${search})}"  aria-label="Next">
+                            <span aria-hidden="true">&gt;&gt;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-sm-12">
             <h3>热门话题</h3>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-sm-12">
+            <ul class="question-releated">
+                <li th:each="hot:${hots}" class="question-releated">
+                    <a th:href="@{'/question/'+${hot.id}}" th:text="${hot.title}"></a>
+                    <span class="index-text-desc">• [[${hot.commentCount}]] 个回复 • [[${hot.viewCount}]] 次浏览 </span>
+
+                </li>
+            </ul>
         </div>
     </div>
-    <nav aria-label="Page navigation">
-        <ul class="pagination">
-            <li th:if="${pageBean.showFirstPage}">
-                <a href="#" th:href="@{/(page=1)}" aria-label="Previous">
-                    <span aria-hidden="true">&lt;&lt;</span>
-                </a>
-            </li>
-            <li th:if="${pageBean.showPrevious}">
-                <a href="#" th:href="@{/(page=${pageBean.page-1})}" aria-label="Previous">
-                    <span aria-hidden="true">&lt;</span>
-                </a>
-            </li>
-            <li th:each="page : ${pageBean.getPages()}" th:class="${pageBean.page == page}?'active':''"><a href="#" th:href="@{/(page=${page})}" th:text="${page}">1</a></li>
-            <li th:if="${pageBean.showNext}">
-                <a href="#"  th:href="@{/(page=${pageBean.page+1})}" aria-label="Next">
-                    <span aria-hidden="true">&gt;</span>
-                </a>
-            </li>
-            <li th:if="${pageBean.showEndPage}">
-                <a href="#" th:href="@{/(page=${pageBean.totalPage})}"  aria-label="Next">
-                    <span aria-hidden="true">&gt;&gt;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-</div>
 
+</div>
+<div th:replace="footer::.foot"></div>
 </body>
 </html>
