--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -17,7 +17,7 @@
 
 <div class="container-fluid main">
     <div class="row">
-        <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12 main-left">
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
             <hr>
             <form action="/publish" method="post">
@@ -30,24 +30,25 @@
                 </div>
                 <div class="form-group" id="question-editor">
                     <label for="description">问题补充 (必填,请参照右侧提示) :</label>
-                    <textarea name="description" id="description" style="display: none" class="form-control" cols="30" rows="10"
+                    <textarea name="description" id="description" style="display: none" class="form-control" cols="30"
+                              rows="10"
                               th:text="${description}"
                               autocomplete="off">
                     </textarea>
                 </div>
                 <script type="text/javascript">
-                    $(function() {
+                    $(function () {
                         var editor = editormd("question-editor", {
-                            width  : "100%",
-                            height : "350px",
-                            path   : "/js/lib/",
-                            delay  : 0,
-                            watch  :false,
+                            width: "100%",
+                            height: "350px",
+                            path: "/js/lib/",
+                            delay: 0,
+                            watch: false,
                             placeholder: "请输入问题描述",
-                            imageUpload    : true,
-                            imageFormats   : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
-                            imageUploadURL : "/file/upload",
-                        });
+                            imageUpload: true,
+                            imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
+                            imageUploadURL: "/file/upload"
+                    })
                     });
                 </script>
                 <div class="form-group">
@@ -58,12 +59,13 @@
                            autocomplete="off">
                 </div>
                 <!--标签-->
-                <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 publish-tag-tab" id="selectTag" >
+                <div class="col-lg-12 col-md-12 col-sm-12 col-sm-12 publish-tag-tab" id="selectTag">
                     <!-- Nav tabs -->
-                    <ul class="nav nav-tabs" role="tablist" >
+                    <ul class="nav nav-tabs" role="tablist">
                         <li role="presentation" th:each="selectCategory:${tagDTOS}"
                             th:class="${selectCategoryStat.first ? 'active':''}">
-                            <a href="#home" th:href="${'#'+selectCategory.categoryName}" aria-controls="home" th:aria-controls="${selectCategory.categoryName}" role="tab" data-toggle="tab"
+                            <a href="#home" th:href="${'#'+selectCategory.categoryName}" aria-controls="home"
+                               th:aria-controls="${selectCategory.categoryName}" role="tab" data-toggle="tab"
                                th:text="${selectCategory.categoryName}"></a>
                         </li>
                     </ul>
@@ -71,9 +73,10 @@
                     <div class="tab-content publish-tags">
                         <div role="tabpanel" th:class="${selectCategoryStat.first ? 'active tab-pane':'tab-pane'}"
                              th:id="${selectCategory.categoryName}" th:each="selectCategory:${tagDTOS}">
-                            <span class="label label-info question-tag" onclick="selectTag(this)" th:data-tag="${tag}"    th:each="tag:${selectCategory.categoryTags}">
+                            <span class="label label-info question-tag" onclick="selectTag(this)" th:data-tag="${tag}"
+                                  th:each="tag:${selectCategory.categoryTags}">
                                 <span class="glyphicon glyphicon-tags" aria-hidden="true"></span>
-                                <span class="label label-info" th:text="${tag}" >spring</span>
+                                <span class="label label-info" th:text="${tag}">spring</span>
                             </span>
                         </div>
                     </div>
@@ -81,7 +84,7 @@
 
                 <div class="container-fluid main">
                     <div class="row">
-                        <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12 publish-error-display" >
+                        <div class="col-lg-9 col-md-12 col-sm-12 col-sm-12 publish-error-display">
                             <div style="width: 800px" class="alert alert-danger" role="alert" th:text="${error}"
                                  th:if="${error != null}"></div>
                         </div>
@@ -93,13 +96,14 @@
 
             </form>
         </div>
-        <div class="col-lg-3 col-md-12 col-sm-12 col-sm-12">
+        <div class="col-lg-3 col-md-12 col-sm-12 col-sm-12 main-right">
             <h3>问题发起指南</h3>
-            • 问题标题 :请用精简的语言的描述您发布的问题，不超过25字<br>
-            • 问题补充 :详细补充您的问题内容，确保问题描述清晰直观，并提供一些相关资料<br>
-            • 选择标签 :选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字<br>
+            <span>问题标题 :请用精简的语言的描述您发布的问题，不超过25字</span><br>
+            <span>问题补充 :详细补充您的问题内容，确保问题描述清晰直观，并提供一些相关资料</span><br>
+            <span>选择标签 :选择一个或者多个合适的标签，用逗号隔开，每个标签不超过10个字</span>
         </div>
     </div>
 </div>
+<div th:replace="footer::.foot"></div>
 </body>
 </html>
