修改问题页面按钮位置

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -17,7 +17,7 @@ body{
 }
 .publish-btn{
     float: right;
-    margin-top: 15px;
+    margin-bottom:  15px;
 }
 .publish-error-display{
     margin-top: 15px;
